[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/ProgressBar.tscn" type="PackedScene" id=2]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/active = false

[sub_resource type="Animation" id=7]
resource_name = "Attack"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deal_damage"
}, {
"args": [  ],
"method": "stop_attack_animation"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Hurt"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 7 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="ColliderArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderArea"]

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 1 )
anims/RESET = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
position = Vector2( -8, 4 )

[node name="Background" parent="HealthBar" index="0"]
margin_right = 16.0

[node name="Inner" parent="HealthBar" index="1"]
margin_right = 14.0

[node name="Filler" parent="HealthBar" index="2"]
margin_right = 15.0
color = Color( 0.807843, 0.113725, 0.164706, 1 )

[editable path="HealthBar"]
